--- a/index.html
+++ b/index.html
@@ -2,24 +2,34 @@
 <html>
 <head>
 <meta charset="utf-8">
-<title>Ember Starter Kit</title>
+<title>miketoymil.com</title>
   <link rel="stylesheet" href="css/normalize.css">
   <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
 
   <script type="text/x-handlebars">
-    <h2>Welcome to Ember.js</h2>
-
-    {{outlet}}
+    <div class="main">
+      {{outlet}}
+    </div>
+    <div class="header"><span>{{#linkTo index}}miketoymil{{/linkTo}} | <a href="http://twitter.com/mtoymil">twitter</a> | <a href="http://github.com/mtoymil">github</a> | <a href="http://www.linkedin.com/in/mtoymil">linkedin</a></span></div>
   </script>
 
   <script type="text/x-handlebars" data-template-name="index">
-    <ul>
-    {{#each item in model}}
-      <li>{{item}}</li>
-    {{/each}}
-    </ul>
+    <div class="title">
+      <span>mike toymil</span>
+    </div>
+    <div class="module index">
+      <div class="bracket left-cap">{</div>
+      <div class="contents">
+        <ul>
+          {{#each model}}
+            <li><a {{bindAttr href="url"}}><span class="key">{{key}}</span><span class="separator">:</span><span class="value">{{value}}</span></a></li>
+          {{/each}}
+        </ul>
+      </div>
+      <div class="bracket right-cap">}</div>
+    </div>
   </script>
 
   <script src="js/libs/jquery-1.9.1.js"></script>
