added userkind and jitsmapper

--- a/index.html
+++ b/index.html
@@ -42,6 +42,7 @@
         <ul>
           <li><a href="http://www.soundkeep.com"><span class="key">Soundkeep:</span> Open source music (node.js, backbone.js, webaudio)</a></li>
           <li><a href="http://disasteroids.com"><span class="key">Disasteroids:</span> Gravity space shooter (node.js, backbone.js, canvas)</a></li>
+          <li><a href="http://www.jitsmapper.com"><span class="key">Jitsmapper:</span> Mindmap Tool for Grapplers (angular.js, jit, django)</a></li>
           <li><a href="http://www.eightbitbeats.com"><span class="key">Eight Bit Beats:</span> Realtime music collaboration (node.js, backbone.js)</a></li>
         </ul>
       </div>
@@ -56,6 +57,7 @@
           <li><a href="http://www.commercekitchen.com"><span class="key">Commerce Kitchen:</span> backbone.js</a></li>
           <li><a href="http://www.simpleenergy.com"><span class="key">Simple Energy:</span> ember.js, php</a></li>
           <li><a href="http://www.sisumedia.com"><span class="key">Sisu Media:</span> backbone.js</a></li>
+          <l1><a href="http://userkind.com/"><span class="key">Userkind:</span> angular.js</a></li>
         </ul>
       </div>
   </script>
